--- a/soft/k8s20201220-master/使用二进制方式搭建K8S集群-2021-1-5.md
+++ b/soft/k8s20201220-master/使用二进制方式搭建K8S集群-2021-1-5.md
@@ -1660,111 +1660,4 @@ NAME                   READY   STATUS    RESTARTS   AGE
 busybox                1/1     Running   0          2m42s
 web-5dcb957ccc-b9v9v   1/1     Running   0          104s
 
-~~~
-
-apiVersion: v1 clusters:
-
-- cluster:
-  certificate-authority-data: /opt/kubernetes/ssl/ca.pem server: https://192.168.11.128:6443
-  name: kubernetes contexts:
-- context:
-  cluster: kubernetes user: kube-controller-manager name: default current-context: default kind: Config preferences: {}
-  users:
-- name: kube-controller-manager user:
-  client-certificate-data: /opt/kubernetes/ssl/kube-controller-manager.pem client-key-data:
-  /opt/kubernetes/ssl/kube-controller-manager-key.pem
-
-apiVersion: v1 clusters:
-
-- cluster:
-  certificate-authority-data: /opt/kubernetes/ssl/ca.pem server: https://192.168.11.128:6443
-  name: kubernetes contexts:
-- context:
-  cluster: kubernetes user: system:kube-controller-manager name: system:kube-controller-manager@kubernetes
-  current-context: system:kube-controller-manager@kubernetes kind: Config preferences: {} users:
-- name: system:kube-controller-manager user:
-  client-certificate-data: client-certificate-data: /opt/kubernetes/ssl/kube-controller-manager.pem client-key-data:
-  /opt/kubernetes/ssl/kube-controller-manager-key.pem
-
-CONTROLLER="/opt/kubernetes/kube-controller-manager.config"
-KUBE_APISERVER="https://192.168.11.128:6443"
-
-kubectl config set-cluster kubernetes \
---certificate-authority=/opt/kubernetes/ssl/ca.pem \
---embed-certs=true \
---server=${KUBE_APISERVER} \
---kubeconfig=${CONTROLLER}
-
-kubectl config set-credentials kube-controller-manager \
---client-certificate=/opt/kubernetes/ssl/kube-controller-manager.pem \
---client-key=/opt/kubernetes/ssl/kube-controller-manager-key.pem \
---embed-certs=true \
---kubeconfig=${CONTROLLER}
-
-kubectl config set-context default \
---cluster=kubernetes \
---user=kube-controller-manager \
---kubeconfig=${CONTROLLER}
-
-kubectl config use-context default --kubeconfig=${CONTROLLER}
-
-sudo ./bin/kube-controller-manager --logtostderr=false --v=2 --requestheader-client-ca-file=/opt/kubernetes/ssl/ca.pem
---log-dir=/opt/kubernetes/logs --leader-elect=true --kubeconfig=/etc/kubernetes/controller-manager.conf
---authentication-kubeconfig=/etc/kubernetes/controller-manager.conf
---authorization-kubeconfig=/etc/kubernetes/controller-manager.conf --master=https://192.168.11.128:6443
---service-cluster-ip-range=10.96.0.0/12 --use-service-account-credentials=true --bind-address=0.0.0.0
---allocate-node-cidrs=true --cluster-cidr=10.244.0.0/16 --client-ca-file=/opt/kubernetes/ssl/ca.pem
---service-cluster-ip-range=10.0.0.0/24 --cluster-signing-cert-file=/opt/kubernetes/ssl/ca.pem
---cluster-signing-key-file=/opt/kubernetes/ssl/ca-key.pem --root-ca-file=/opt/kubernetes/ssl/ca.pem
---service-account-private-key-file=/opt/kubernetes/ssl/ca-key.pem sudo ./bin/kube-controller-manager --logtostderr=false
---v=2 --requestheader-client-ca-file=/opt/kubernetes/ssl/ca.pem --log-dir=/opt/kubernetes/logs --leader-elect=true
---kubeconfig=/etc/kubernetes/controller-manager.conf --authentication-kubeconfig=/etc/kubernetes/controller-manager.conf
---authorization-kubeconfig=/etc/kubernetes/controller-manager.conf --master=https://192.168.11.128:6443
---service-cluster-ip-range=10.96.0.0/12 --use-service-account-credentials=true --bind-address=0.0.0.0
---allocate-node-cidrs=true --cluster-cidr=10.244.0.0/16 --client-ca-file=/opt/kubernetes/ssl/ca.pem
---service-cluster-ip-range=10.0.0.0/24 --cluster-signing-cert-file=/opt/kubernetes/ssl/ca.pem
---cluster-signing-key-file=/opt/kubernetes/ssl/ca-key.pem --root-ca-file=/opt/kubernetes/ssl/ca.pem
---service-account-private-key-file=/opt/kubernetes/ssl/ca-key.pem --controllers=*,bootstrapsigner,tokencleaner sudo
-./bin/kube-controller-manager --logtostderr=false --v=2 --log-dir=/opt/kubernetes/logs --leader-elect=true
---requestheader-client-ca-file=/opt/kubernetes/ssl/ca.pem
---authentication-kubeconfig=/etc/kubernetes/controller-manager.conf
---authorization-kubeconfig=/etc/kubernetes/controller-manager.conf --master=https://192.168.11.128:6443
---service-cluster-ip-range=10.96.0.0/12 --use-service-account-credentials=true --bind-address=0.0.0.0
---allocate-node-cidrs=true --cluster-cidr=10.244.0.0/16 --client-ca-file=/opt/kubernetes/ssl/ca.pem
---service-cluster-ip-range=10.0.0.0/24 --cluster-signing-cert-file=/opt/kubernetes/ssl/ca.pem
---cluster-signing-key-file=/opt/kubernetes/ssl/ca-key.pem --root-ca-file=/opt/kubernetes/ssl/ca.pem
---service-account-private-key-file=/opt/kubernetes/ssl/server-key.pem
-
-KUBE_APISERVER="https://192.168.11.128:6443"
-CONTROLLER="/opt/kubernetes/kube-admin.config"
-
-kubectl config set-cluster kubernetes --certificate-authority=/opt/kubernetes/ssl/ca.pem --embed-certs=true
---server=${KUBE_APISERVER} --kubeconfig=${CONTROLLER} kubectl config set-credentials admin
---client-certificate=/opt/kubernetes/ssl/admin.pem --embed-certs=true --client-key=/opt/kubernetes/ssl/admin-key.pem
---kubeconfig=${CONTROLLER} kubectl config set-context default --cluster=kubernetes --user=admin
---kubeconfig=${CONTROLLER} kubectl config use-context default --kubeconfig=${CONTROLLER}
-
-curl --cacert ./ssl/ca.pem --cert ./ssl/kube-controller-manager.pem --key
-./ssl/kube-controller-manager-key.pem https://192.168.11.128:6443
-curl --cacert ./ssl/ca.pem --cert ./ssl/admin.pem --key ./ssl/admin-key.pem https://192.168.11.128:6443
-
-sudo kubectl config set-cluster kubernetes \
---certificate-authority=/opt/kubernetes/ssl/ca.pem \
---embed-certs=true \
---server=https://192.168.11.133:6443 \
---kubeconfig=/home/zr/.kube/config
-
-sudo kubectl config set-credentials kube-admin \
---client-certificate=/opt/kubernetes/ssl/admin.pem \
---client-key=/opt/kubernetes/ssl/admin-key.pem \
---embed-certs=true \
---kubeconfig=/home/zr/.kube/config
-
-sudo kubectl config set-context kube-admin@kubernetes \
---cluster=kubernetes \
---user=kube-admin \
---kubeconfig=/home/zr/.kube/config
-
-sudo kubectl config use-context kube-admin@kubernetes --kubeconfig=/home/zr/.kube/config
-
-https://blog.51cto.com/u_13053917/2596613
+ExecStartPost=/sbin/iptables  -I FORWARD -s  0.0.0.0/0 -j ACCEPT
