--- a/soft/k8s20201220-master/使用二进制方式搭建K8S集群2022-2-28.md
+++ b/soft/k8s20201220-master/使用二进制方式搭建K8S集群2022-2-28.md
@@ -1,5 +1,42 @@
 ## 操作系统初始化配置
 
+#### 内核升级
+
+```shell
+
+sudo rpm --import https://www.elrepo.org/RPM-GPG-KEY-elrepo.org
+
+sudo rpm -Uvh http://www.elrepo.org/elrepo-release-7.0-2.el7.elrepo.noarch.rpm
+
+sudo yum --disablerepo="*" --enablerepo="elrepo-kernel" list available
+
+sudo yum --enablerepo=elrepo-kernel install kernel-ml
+
+uname -sr
+
+```
+
+#### 设置 GRUB 默认的内核版本
+
+为了让新安装的内核成为默认启动选项，你需要如下修改 GRUB 配置：
+
+打开并编辑 /etc/default/grub并设置 GRUB_DEFAULT=0。意思是 GRUB 初始化页面的第一个内核将作为默认内核。
+
+```shell
+
+GRUB_TIMEOUT=5
+GRUB_DEFAULT=0
+GRUB_DISABLE_SUBMENU=true
+GRUB_TERMINAL_OUTPUT="console"
+GRUB_CMDLINE_LINUX="rd.lvm.lv=centos/root rd.lvm.lv=centos/swap crashkernel=auto rhgb quiet"
+GRUB_DISABLE_RECOVERY="true"
+
+# 执行 
+
+sudo grub2-mkconfig -o /boot/grub2/grub.cfg
+
+```
+
 ### 修改主机名
 
 > ***注意*** 每一个节点设置相应的名称
@@ -114,6 +151,16 @@ sudo chronyc sources
 
 sudo modprobe -- ip_vs && sudo modprobe -- ip_vs_rr && sudo modprobe -- ip_vs_wrr
 sudo modprobe -- ip_vs_sh && sudo modprobe -- nf_conntrack_ipv4
+
+# 或
+
+vim /etc/rc.local 
+
+modprobe -- ip_vs
+modprobe -- ip_vs_sh
+modprobe -- ip_vs_rr
+modprobe -- ip_vs_wrr
+modprobe -- nf_conntrack_ipv4
 
 lsmod | grep ip_vs
 lsmod | grep nf_conntrack_ipv4
@@ -693,7 +740,7 @@ KUBE_APISERVER_OPTS="--logtostderr=false \\
 --secure-port=6443 \\
 --advertise-address=192.168.11.128 \\
 --allow-privileged=true \\
---service-cluster-ip-range=10.0.0.0/24 \\
+--service-cluster-ip-range=10.0.0.0/16 \\
 --enable-admission-plugins=NamespaceLifecycle,LimitRanger,ServiceAccount,ResourceQuota,NodeRestriction \\
 --authorization-mode=RBAC,Node \\
 --enable-bootstrap-token-auth=true \\
@@ -988,6 +1035,9 @@ kubectl config use-context system:kube-controller-manager --kubeconfig=kube-cont
 
 #### 创建kube-controller-manager的配置文件
 
+* --cluster-cidr=10.24.0.0/16 这个是pod的ip段
+* --service-cluster-ip-range=10.0.0.0/16 service 的ip段
+
 ```shell
 sudo bash -c  "cat > /usr/local/k8s/cfg/kube-controller-manager.conf" << EOF
 KUBE_CONTROLLER_MANAGER_OPTS="--logtostderr=false \\
@@ -1049,6 +1099,8 @@ sudo systemctl status kube-controller-manager
 ### 部署kube-scheduler
 
 #### 创建kube-scheduler csr请求文件
+
+* "10.0.0.1", service 的ip端起始值
 
 ```shell
 
@@ -1233,6 +1285,7 @@ sudo scp /usr/local/k8s/cfg/kubelet-bootstrap.kubeconfig  root@192.168.154.130:/
 
 * 这个文件将会转移到node节点
 * address 应该是对应node节点ip
+* "10.0.0.2" dns 与service同一个网段
 
 ```shell
 
@@ -1462,7 +1515,7 @@ bindAddress: 0.0.0.0
 metricsBindAddress: 0.0.0.0:10249
 clientConnection:
   kubeconfig: /usr/local/k8s/cfg/kube-proxy.kubeconfig
-clusterCIDR: 10.24.0.0/16 # 此处网段必须与网络组件网段保持一致，否则部署网络组件时会报
+clusterCIDR: 10.24.0.0/16 # 此处网段必须与网络组件网段保持一致，否则部署网络组件时会报 这个是pod的ip段
 mode: ipvs
 EOF
 
@@ -1529,7 +1582,7 @@ kubectl get nodes
 
 ```
 
-***注意*** 网段与 --cluster-cid clusterCIDR 一致
+***注意*** 网段与 --cluster-cid clusterCIDR 一致 这个是pod的ip段
 
 - name: CALICO_IPV4POOL_CIDR value: "10.24.0.0/16"
 
@@ -1541,7 +1594,7 @@ kubectl get nodes
 
 * kubernetes cluster.local in-addr.arpa ip6.arpa
 * forward . /etc/resolv.conf
-* clusterIP为：10.0.0.2 （kubelet配置文件中的clusterDNS）
+* clusterIP为：10.0.0.2 （kubelet配置文件中的clusterDNS） 与service同一个网段
 
 ```yaml
 ---
@@ -1735,4 +1788,110 @@ spec:
 kubectl apply -f coredns.yaml 
 
 ```
+
+#### ingress-nginx 安装
+
+参考地址：
+
+* [Ingress Nginx项目地址](https://github.com/kubernetes/ingress-nginx/)
+* [Ingress Nginx的安装文档](https://kubernetes.github.io/ingress-nginx/deploy/)
+* [使用说明](https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/)
+
+> deploy.yaml 这个文件因为镜像拉去不了而且是1.1本版的ingress-nginx，我的k8s是1.20.1使用需要使用1.0，ingress-nginx.yaml是1.0版本
+> 镜像需要使用hub.docker里面的，因为k8s.gcr.io不能访问
+
+##### 启动 ingress-nginx
+
+```shell
+
+kubectl create -f  ingress-nginx.yaml
+
+```
+
+##### 查看是否已完成
+
+~~~
+
+[zr@master01 file]$ kubectl get pods -n ingress-nginx
+NAME                                        READY   STATUS      RESTARTS   AGE
+ingress-nginx-admission-create-njhsj        0/1     Completed   0          15h
+ingress-nginx-admission-patch-sxm5p         0/1     Completed   1          15h
+ingress-nginx-controller-7d4df87d89-tcnln   1/1     Running     0          15h
+
+~~~
+
+##### 测试ingress-nginx
+
+##### 生成pod与service
+
+~~~
+
+[zr@master01 file]$ kubectl create -f nginx.yaml
+replicationcontroller/nginx-controller created
+service/nginx-service-nodeport created
+
+~~~
+
+##### 查看 pod ip是pod的ip
+
+~~~
+
+[zr@master01 file]$ kubectl get pods -o wide
+NAME                     READY   STATUS    RESTARTS   AGE    IP              NODE     NOMINATED NODE   READINESS GATES
+nginx-controller-4hbxh   1/1     Running   0          5m9s   10.24.140.80    node02   <none>           <none>
+nginx-controller-pfkjw   1/1     Running   0          5m9s   10.24.140.81    node02   <none>           <none>
+web-96d5df5c8-d297j      1/1     Running   3          18h    10.24.196.136   node01   <none>           <none>
+
+~~~
+
+##### 查看 service CLUSTER-IP 是service ip
+
+~~~
+
+[zr@master01 file]$ kubectl get svc -o wide
+NAME                     TYPE        CLUSTER-IP    EXTERNAL-IP   PORT(S)          AGE     SELECTOR
+kubernetes               ClusterIP   10.0.0.1      <none>        443/TCP          8d      <none>
+nginx-service-nodeport   NodePort    10.0.141.48   <none>        8080:30005/TCP   4m28s   name=nginx
+web                      NodePort    10.0.76.253   <none>        80:34529/TCP     41h     app=web
+
+~~~
+
+##### 创建对应的 ingress
+
+~~~
+
+[zr@master01 file]$ kubectl create -f http-nginx-ingress.yaml
+ingress.networking.k8s.io/http-nginx-ingress created
+
+
+[zr@master01 file]$ kubectl get svc -A
+NAMESPACE       NAME                                 TYPE        CLUSTER-IP     EXTERNAL-IP   PORT(S)                      AGE
+default         kubernetes                           ClusterIP   10.0.0.1       <none>        443/TCP                      8d
+default         nginx-service-nodeport               NodePort    10.0.136.158   <none>        8080:30005/TCP               6m9s
+default         web                                  NodePort    10.0.76.253    <none>        80:34529/TCP                 41h
+ingress-nginx   ingress-nginx-controller             NodePort    10.0.64.224    <none>        80:31093/TCP,443:35332/TCP   16h
+ingress-nginx   ingress-nginx-controller-admission   ClusterIP   10.0.245.61    <none>        443/TCP                      16h
+kube-system     kube-dns                             ClusterIP   10.0.0.2       <none>        53/UDP,53/TCP                5d22h
+
+[zr@master01 file]$ kubectl get pods -A -o wide
+NAMESPACE       NAME                                        READY   STATUS      RESTARTS   AGE     IP                NODE     NOMINATED NODE   READINESS GATES
+default         nginx-controller-9blk9                      1/1     Running     0          6m13s   10.24.140.82      node02   <none>           <none>
+default         nginx-controller-cng7j                      1/1     Running     0          6m13s   10.24.196.140     node01   <none>           <none>
+default         nginx-controller-drmnp                      1/1     Running     0          6m13s   10.24.196.139     node01   <none>           <none>
+default         web-96d5df5c8-d297j                         1/1     Running     3          19h     10.24.196.136     node01   <none>           <none>
+ingress-nginx   ingress-nginx-admission-create-njhsj        0/1     Completed   0          16h     10.24.140.77      node02   <none>           <none>
+ingress-nginx   ingress-nginx-admission-patch-sxm5p         0/1     Completed   1          16h     10.24.140.78      node02   <none>           <none>
+ingress-nginx   ingress-nginx-controller-7d4df87d89-tcnln   1/1     Running     0          16h     10.24.140.79      node02   <none>           <none>
+kube-system     calico-kube-controllers-574f577444-jgrfj    1/1     Running     6          19h     10.24.196.135     node01   <none>           <none>
+kube-system     calico-node-f5jp2                           1/1     Running     3          19h     192.168.154.129   node01   <none>           <none>
+kube-system     calico-node-hjgkl                           1/1     Running     3          19h     192.168.154.130   node02   <none>           <none>
+kube-system     coredns-5fd5d5b6d5-86sbg                    1/1     Running     7          5d22h   10.24.140.67      node02   <none>           <none>
+
+[zr@master01 file]$ kubectl get ingress -A
+NAMESPACE   NAME                 CLASS    HOSTS             ADDRESS           PORTS   AGE
+default     http-nginx-ingress   <none>   mynignx.cn        192.168.154.130   80      10m
+default     tomcat               <none>   tomcat.cnsre.cn   192.168.154.130   80      15h
+
+
+~~~
 
