--- a/soft/k8s20201220-master/使用二进制方式搭建K8S集群2022-2-28.md
+++ b/soft/k8s20201220-master/使用二进制方式搭建K8S集群2022-2-28.md
@@ -539,6 +539,11 @@ docker pull registry.cn-hangzhou.aliyuncs.com/google_containers/coredns:1.7.0
 docker tag registry.cn-hangzhou.aliyuncs.com/google_containers/coredns:1.7.0 k8s.gcr.io/coredns:1.7.0
 docker rmi registry.cn-hangzhou.aliyuncs.com/google_containers/coredns:1.7.0
 
+# 阿里云镜像与k8s.gcr.io 对应关系
+docker tag registry.cn-hangzhou.aliyuncs.com/google_containers/nginx-ingress-controller:v1.2.0  k8s.gcr.io/ingress-nginx/controller:v1.2.0
+docker tag registry.cn-hangzhou.aliyuncs.com/google_containers/kube-webhook-certgen:v1.1.1  k8s.gcr.io/ingress-nginx/kube-webhook-certgen:v1.1.1
+
+
 ```
 
 #### 创建配置文件
@@ -1526,11 +1531,23 @@ sudo scp /usr/local/k8s/cfg/kube-proxy.yaml  root@192.168.154.130:/usr/local/k8s
 
 #### 创建kube-proxy服务配置文件
 
+> --masquerade-all=true 这个需要和  如果kube-proxy以--masquerade-all = true开头，则ipvs proxier将伪装访问服务群集IP的所有流量，其行为与iptables proxier相同
+
+masquerade-all 是一种模式，把集群所有流量劫持，我不添加hosts  http://mynignx.cn:30005/ 也能劫持
+
+解决  ingress-nginx pod  ingress-nginx-controller-* 类型pod不能访问 svcIP 443 端口 （10.0.0.1:443）
+--proxy-mode=ipvs \
+
+>  这个是  --proxy-mode 的可选项
+
+--masquerade-all=true \
+
 ```shell
 
 sudo bash -c  "cat > /usr/local/k8s/cfg/kube-proxy.conf" << EOF
 KUBE_PROXY_OPTS="--logtostderr=false \\
 --v=2 \\
+--masquerade-all=true \\
 --log-dir=/usr/local/k8s/logs \\
 --config=/usr/local/k8s/cfg/kube-proxy-config.yml"
 EOF
@@ -1892,6 +1909,31 @@ NAMESPACE   NAME                 CLASS    HOSTS             ADDRESS           PO
 default     http-nginx-ingress   <none>   mynignx.cn        192.168.154.130   80      10m
 default     tomcat               <none>   tomcat.cnsre.cn   192.168.154.130   80      15h
 
+
+~~~
+
+
+~~~
+
+[zr@master01 ~]$ kubectl get pod,svc,ingress -o wide
+NAME                         READY   STATUS    RESTARTS   AGE   IP              NODE     NOMINATED NODE   READINESS GATES
+pod/nginx-controller-fdh2w   1/1     Running   1          17h   10.24.140.112   node02   <none>           <none>
+
+NAME                             TYPE        CLUSTER-IP    EXTERNAL-IP   PORT(S)          AGE   SELECTOR
+service/kubernetes               ClusterIP   10.0.0.1      <none>        443/TCP          98d   <none>
+service/nginx-service-nodeport   NodePort    10.0.73.141   <none>        8080:30005/TCP   17h   name=nginx
+
+NAME                                           CLASS    HOSTS        ADDRESS           PORTS   AGE
+ingress.networking.k8s.io/http-nginx-ingress   <none>   mynignx.cn   192.168.154.130   80      15h
+[zr@master01 ~]$ kubectl get pod,svc,ingress -n ingress-nginx -o wide
+NAME                                            READY   STATUS      RESTARTS   AGE   IP                NODE     NOMINATED NODE   READINESS GATES
+pod/ingress-nginx-admission-create-dtxfq        0/1     Completed   0          16h   192.168.154.129   node01   <none>           <none>
+pod/ingress-nginx-admission-patch-pxlqv         0/1     Completed   0          16h   192.168.154.130   node02   <none>           <none>
+pod/ingress-nginx-controller-7d4df87d89-jfgdf   1/1     Running     1          15h   10.24.140.111     node02   <none>           <none>
+
+NAME                                         TYPE        CLUSTER-IP    EXTERNAL-IP   PORT(S)                      AGE   SELECTOR
+service/ingress-nginx-controller             NodePort    10.0.10.173   <none>        80:37965/TCP,443:35074/TCP   16h   app.kubernetes.io/component=controller,app.kubernetes.io/instance=ingress-nginx,app.kubernetes.io/name=ingress-nginx
+service/ingress-nginx-controller-admission   ClusterIP   10.0.76.147   <none>        443/TCP                      16h   app.kubernetes.io/component=controller,app.kubernetes.io/instance=ingress-nginx,app.kubernetes.io/name=ingress-nginx
 
 ~~~
 
